--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ instance/*
 !instance/.gitignore
 .webassets-cache
 .env
+gbst_env/
+migrations/
 
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
